--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://4f692aa5-5871-43a6-bc8c-5d5cb6026edd.preview.emergentagent.com
 WDS_SOCKET_PORT=443
